tests/ui/struct_not_found.ray
// COMPILE_FAIL

fn main() {
    let a = Foo { a: 32 };
}

